[gd_scene load_steps=4 format=1]

[ext_resource path="res://PlayerPieces/ChargeBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Allies/charge_bar_background.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.286275, 0.121569, 0.533333, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="ChargeBar" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Charge1" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 11.0
margin/right = 3.0
margin/bottom = 30.0
custom_styles/panel = SubResource( 1 )

[node name="Charge2" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -10.0
margin/right = 3.0
margin/bottom = 9.0
custom_styles/panel = SubResource( 1 )

[node name="Charge3" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -31.0
margin/right = 3.0
margin/bottom = -12.0
custom_styles/panel = SubResource( 1 )


